--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!doctype html>
 <html>
 <head>
+<title> Free DDoS Software</title>
 </head>
-
 <body>
+<a href="http://resources.infosecinstitute.com/dos-attacks-free-dos-attacking-tools/">Click here for free software</a>
+</body>
+</html>
